tests/script_runtime_errors/obj_bad_key2/error.txt
Error: 
    2 | event[key]
      |       ^^^ Trying to access a non existing event key `badger`
